--- a/charts/node-analyzer/tests/collector_endpoint_region_test.yaml
+++ b/charts/node-analyzer/tests/collector_endpoint_region_test.yaml
@@ -70,6 +70,438 @@ tests:
           path: data.collector_endpoint
           value: https://app.au1.sysdig.com
 
+  - it: Checking region 'au-syd-monitor'
+    set:
+      global:
+        sysdig:
+          region: au-syd-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://au-syd.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'br-sao-monitor'
+    set:
+      global:
+        sysdig:
+          region: br-sao-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://br-sao.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'ca-tor-monitor'
+    set:
+      global:
+        sysdig:
+          region: ca-tor-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://ca-tor.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-de-monitor'
+    set:
+      global:
+        sysdig:
+          region: eu-de-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://eu-de.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-gb-monitor'
+    set:
+      global:
+        sysdig:
+          region: eu-gb-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://eu-gb.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-osa-monitor'
+    set:
+      global:
+        sysdig:
+          region: jp-osa-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://jp-osa.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-tok-monitor'
+    set:
+      global:
+        sysdig:
+          region: jp-tok-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://jp-tok.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-east-monitor'
+    set:
+      global:
+        sysdig:
+          region: us-east-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://us-east.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-south-monitor'
+    set:
+      global:
+        sysdig:
+          region: us-south-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://us-south.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'au-syd-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: au-syd-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.au-syd.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'br-sao-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: br-sao-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.br-sao.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'ca-tor-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: ca-tor-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.ca-tor.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-de-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: eu-de-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.eu-de.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-gb-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: eu-gb-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.eu-gb.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-osa-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: jp-osa-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.jp-osa.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-tok-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: jp-tok-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.jp-tok.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-east-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: us-east-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.us-east.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-south-private-monitor'
+    set:
+      global:
+        sysdig:
+          region: us-south-private-monitor
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.us-south.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'au-syd-secure'
+    set:
+      global:
+        sysdig:
+          region: au-syd-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://au-syd.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'br-sao-secure'
+    set:
+      global:
+        sysdig:
+          region: br-sao-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://br-sao.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'ca-tor-secure'
+    set:
+      global:
+        sysdig:
+          region: ca-tor-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://ca-tor.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-de-secure'
+    set:
+      global:
+        sysdig:
+          region: eu-de-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://eu-de.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-gb-secure'
+    set:
+      global:
+        sysdig:
+          region: eu-gb-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://eu-gb.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-osa-secure'
+    set:
+      global:
+        sysdig:
+          region: jp-osa-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://jp-osa.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-tok-secure'
+    set:
+      global:
+        sysdig:
+          region: jp-tok-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://jp-tok.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-east-secure'
+    set:
+      global:
+        sysdig:
+          region: us-east-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://us-east.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-south-secure'
+    set:
+      global:
+        sysdig:
+          region: us-south-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://us-south.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'au-syd-private-secure'
+    set:
+      global:
+        sysdig:
+          region: au-syd-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.au-syd.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'br-sao-private-secure'
+    set:
+      global:
+        sysdig:
+          region: br-sao-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.br-sao.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'ca-tor-private-secure'
+    set:
+      global:
+        sysdig:
+          region: ca-tor-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.ca-tor.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-de-private-secure'
+    set:
+      global:
+        sysdig:
+          region: eu-de-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.eu-de.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'eu-gb-private-secure'
+    set:
+      global:
+        sysdig:
+          region: eu-gb-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.eu-gb.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-osa-private-secure'
+    set:
+      global:
+        sysdig:
+          region: jp-osa-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.jp-osa.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'jp-tok-private-secure'
+    set:
+      global:
+        sysdig:
+          region: jp-tok-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.jp-tok.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-east-private-secure'
+    set:
+      global:
+        sysdig:
+          region: us-east-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.us-east.security-compliance-secure.cloud.ibm.com
+
+  - it: Checking region 'us-south-private-secure'
+    set:
+      global:
+        sysdig:
+          region: us-south-private-secure
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - equal:
+          path: data.collector_endpoint
+          value: https://private.us-south.security-compliance-secure.cloud.ibm.com
+
   - it: Checking wrong region input
     set:
       global:
